# hexlet-my-first-workflow

./: Makefile  README.md  pyproject.toml
hello/scripts/: script.py
