[tool.poetry]
name = "first-workflow"
version = "0.1.0"
description = ""
authors = ["Schegolkova <broodingthinker@gmail.com>"]
readme = "README.md"
packages = [
  { include = "hello" },
]


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "hello.scripts.script:main"